syntax = "proto3";

option go_package = "/pb";

import "google/protobuf/timestamp.proto";

// Cart service definition
service CartService {
    rpc AddCart(AddCartRequest) returns (AddCartResponse);
    rpc SubstractCart(SubstractCartRequest) returns (SubstractCartResponse);
    rpc GetCart(GetCartRequest) returns (GetCartResponse);
}

// Request and Response messages
message AddCartRequest {
    int32 user_id = 1;
    int32 shoes_id = 2;
    int32 quantity = 3;
}

message AddCartResponse {
    CartItem item = 1;  // Use singular 'item' for a single CartItem
}

message SubstractCartRequest {
    int32 user_id = 1;
    int32 shoes_id = 2;
    int32 quantity = 3;
}

message SubstractCartResponse {
    CartItem item = 1;  // Use singular 'item' for a single CartItem
}

message GetCartRequest {
    int32 user_id = 1;
}

// Define a CartItem message to represent a single item in the cart
message CartItem {
    int32 cart_id = 1;
    int32 user_id = 2;
    int32 shoes_id = 3;
    int32 quantity = 4;
}

// Use repeated to return a list of CartItems in GetCartResponse
message GetCartResponse {
    repeated CartItem items = 1;  // Correct use of repeated for multiple items
}
